--- a/Common/src/main/resources/assets/botania/lang/pt_br.json
+++ b/Common/src/main/resources/assets/botania/lang/pt_br.json
@@ -1952,54 +1952,54 @@
   "botania.page.lens36": "A $(item)Lente de Clarão$(0) cria uma chama em um bloco, da mesma cor que o pulso que a causou. A chama fornece luz e é puramente decorativa.$(p)Se uma explosão atingir uma dessas chamas, ela apagará a chama.",
   "botania.page.lens37": "Lente de Clarão",
 
-  "botania.entry.manaTablet": "Mana Tablet",
-  "botania.tagline.manaTablet": "Portable Mana Storage",
-  "botania.page.manaTablet0": "Using $(l:mana/spreader)$(item)Mana Spreaders$(0)$(/l) to transport $(thing)Mana$(0) is all well and good, but there are other ways of getting the stuff around too.$(p)The $(item)Mana Tablet$(0) is a portable item that can carry $(thing)Mana$(0) within itself.$(p)In addition, other items in an inventory can draw from it for their own use, making it an essential tool.",
-  "botania.page.manaTablet1": "Tossing a tablet into a $(l:mana/pool)$(item)Mana Pool$(0)$(/l) will allow for flow of $(thing)Mana$(0) between them.$(p)Sneak-right clicking (or using a $(item)Dispenser$(0)) on the $(l:mana/pool)$(item)Mana Pool$(0)$(/l) with a $(l:basics/wand)$(item)Wand of the Forest$(0)$(/l) will change which way the $(thing)Mana$(0) will flow.$(p)Unlike normal items, dropped tablets never despawn.",
-  "botania.page.manaTablet2": "Sadly, it doesn't have wifi",
+  "botania.entry.manaTablet": "Tablete de Mana",
+  "botania.tagline.manaTablet": "Armazenamento de Mana Portátil",
+  "botania.page.manaTablet0": "Usando $(l:mana/spreader)$(item)Dispersores de Mana$(0)$(/l) para transportar $(thing)Mana$(0) é tudo muito bom, mas existem outras maneiras de obter as coisas também.$(p)O $(item)Tablete de Mana$(0) é um item portátil que pode transportar $(thing)Mana$(0) dentro de si.$(p)Além disso, outros itens em um inventário podem extrair dele para uso próprio, tornando-o uma ferramenta essencial.",
+  "botania.page.manaTablet1": "Jogando um tablete em um $(l:mana/pool)$(item)Poço de Mana$(0)$(/l) permitirá o fluxo de $(thing)Mana$(0) entre eles.$(p)Shift+clique-direito (ou usando um $(item)dispersor$(0)) no $(l:mana/pool)$(item)Poço de Mana$(0)$(/l) com uma $(l:basics/wand)$(item)Varinha da Floresta$(0)$(/l) vai mudar a maneira como a $(thing)Mana$(0) vai fluir.$(p)Ao contrário dos itens normais, os tabletes caídos nunca desaparecem.",
+  "botania.page.manaTablet2": "Infelizmente não tem wifi",
 
-  "botania.entry.manaMirror": "Mana Mirror",
-  "botania.tagline.manaMirror": "Remote Portable Mana Access",
-  "botania.page.manaMirror0": "A $(item)Mana Mirror$(0) is an alternative to $(thing)Mana$(0)-containing items like $(l:mana/mana_tablet)$(item)Tablets$(0)$(/l). After it's bound to a $(l:mana/pool)$(item)Mana Pool$(0)$(/l), items in the inventory requiring $(thing)Mana$(0) will draw from it.$(p)To bind a mirror to a pool, simply $(thing)sneak-right click$(0) the pool with the mirror. The mirror can't input or output mana from/to pools in any other way.",
-  "botania.page.manaMirror1": "Mirror mirror on the wall...",
+  "botania.entry.manaMirror": "Espelho de Mana",
+  "botania.tagline.manaMirror": "Acesso de Mana Portátil Remoto",
+  "botania.page.manaMirror0": "Um $(item)Espelho de Mana$(0) é uma alternativa para itens que contém $(thing)Mana$(0) como $(l:mana/mana_tablet)$(item)Tabletes$(0)$(/l). Depois de ser vinculado a um $(l:mana/pool)$(item)Poço de Mana$(0)$(/l), itens no inventário que exigem $(thing)Mana$(0) vai tirar dele.$(p)Para ligar um espelho a um poço, basta $(thing)shift+clique-direito$(0) o poço com o espelho. O espelho não pode enviar ou tirar mana de/para outros poços de nenhuma outra maneira.",
+  "botania.page.manaMirror1": "Espelho, espelho na parede...",
 
-  "botania.entry.manaDetector": "Mana Detector",
-  "botania.tagline.manaDetector": "Detects Mana Bursts and emits Redstone signals",
-  "botania.page.manaDetector0": "The $(item)Mana Detector$(0) detects when a $(thing)Mana Burst$(0) flows through it (bursts pass through this block like air) and provides a redstone signal for the occasion.",
-  "botania.page.manaDetector1": "Crafting the detector",
+  "botania.entry.manaDetector": "Detector de Mana",
+  "botania.tagline.manaDetector": "Detecta Pulsos de Mana e emite sinais de Redstone",
+  "botania.page.manaDetector0": "O $(item)Detector de Mana$(0) detecta quando um $(thing)Pulso de Mana$(0) flui através dele (pulsos passam por este bloco como ar) e fornece um sinal de redstone para a ocasião.",
+  "botania.page.manaDetector1": "Criando o detector",
 
-  "botania.entry.redstoneSpreader": "Pulse Mana Spreader",
-  "botania.tagline.redstoneSpreader": "A spreader that fires on a Redstone pulse",
-  "botania.page.redstoneSpreader0": "By combining a $(l:mana/spreader)$(item)Mana Spreader$(0)$(/l) with a piece of $(item)Redstone$(0), a $(item)Pulse Mana Spreader$(0) is created, which (as the name implies) fires when given a $(thing)redstone pulse$(0), regardless of target.$(p)Keep in mind that it still won't shoot a burst until the last one dissipates or is absorbed.",
-  "botania.page.redstoneSpreader1": "Lil' touch of redstone",
+  "botania.entry.redstoneSpreader": "Dispersor de Mana Pulso",
+  "botania.tagline.redstoneSpreader": "Um dispersor que dispara um pulso de Redstone",
+  "botania.page.redstoneSpreader0": "Ao combinar um $(l:mana/spreader)$(item)Dispersor de Mana$(0)$(/l) com um pedaço de $(item)Redstone$(0), um $(item)Dispersor de Mana Pulso$(0) é criado, que (como o nome indica) dispara quando recebe um $(thing)pulso de redstone$(0), independentemente do alvo.$(p)Tenha em mente que ele ainda não disparará um pulso até que o último se dissipe ou seja absorvido.",
+  "botania.page.redstoneSpreader1": "Pequeno toque de redstone",
 
-  "botania.entry.manastar": "Manastar",
-  "botania.tagline.manastar": "A flower for checking net mana flow",
-  "botania.page.manastar0": "The imprecise measurements of the $(l:basics/wand)$(item)Wand of the Forest$(0)$(/l) sometimes won't cut it for telling if you're turning a profit or loss in your $(l:mana/pool)$(item)Mana Pools$(0)$(/l).$(p)Creating a $(item)Manastar$(0) and placing it next to a pool will have the flower shine red if there's a loss, or blue if there's a profit. The measurement updates every few seconds.",
-  "botania.page.manastar1": "It's a shooting star leaping through the skies",
+  "botania.entry.manastar": "Estrela de Mana",
+  "botania.tagline.manastar": "Uma flor para verificar o fluxo de mana líquido",
+  "botania.page.manastar0": "As medidas imprecisas da $(l:basics/wand)$(item)Varinha da Floresta$(0)$(/l) às vezes não serve para dizer se você está obtendo lucro ou prejuízo em seus $(l:mana/pool)$(item)Poços de Mana$(0)$(/l).$(p)Criando a $(item)Estrela de Mana$(0) e colocá-lo próximo a um poço fará com que a flor brilhe em vermelho se houver perda, ou azul se houver lucro. A medição é atualizada a cada poucos segundos.",
+  "botania.page.manastar1": "É uma estrela cadente saltando pelos céus",
 
-  "botania.entry.dreamwoodSpreader": "Elven Mana Spreaders",
-  "botania.tagline.dreamwoodSpreader": "Harder, better, faster, stronger",
-  "botania.page.dreamwoodSpreader0": "When it comes right down to it, $(l:alfhomancy/elf_resources)$(item)Dreamwood$(0)$(/l) simply conducts $(thing)Mana$(0) better than $(l:basics/pure_daisy)$(item)Livingwood$(0)$(/l). A few adjustments in recipe (like substituting $(l:alfhomancy/elf_resources)$(item)Elementium$(0)$(/l) for $(item)Gold$(0)) yield an $(item)Elven Mana Spreader$(0), which conducts more $(thing)Mana$(0), faster, and for longer without $(thing)Mana Loss$(0).$(p)Unfortunately, these can't be turned into $(l:mana/redstone_spreader)$(item)Pulse Mana Spreaders$(0)$(/l).",
-  "botania.page.dreamwoodSpreader1": "Better spreaders, that's it",
-  "botania.page.dreamwoodSpreader2": "Combining this already-powerful spreader with a $(l:alfhomancy/gaia_ritual)$(item)Gaia Spirit$(0)$(/l) and a $(l:alfhomancy/elf_resources)$(item)Dragonstone$(0)$(/l) gem yields an even more potent variant. The $(item)Gaia Spreader$(0) is the gold standard of $(l:mana/spreader)$(item)Mana Spreaders$(0)$(/l), with upgrades pretty much all around.$(p)Do note that these spreaders fire larger payloads at once (and thus might fire less often).",
-  "botania.page.dreamwoodSpreader3": "The ultimate Mana Spreader",
+  "botania.entry.dreamwoodSpreader": "Dispersor de Mana Élfico",
+  "botania.tagline.dreamwoodSpreader": "Mais duro, melhor, mais rápido, mais forte",
+  "botania.page.dreamwoodSpreader0": "Quando se trata disso, $(l:alfhomancy/elf_resources)$(item)Madeira dos Sonhos$(0)$(/l) simplesmente conduz $(thing)Mana$(0) melhor que $(l:basics/pure_daisy)$(item)Madeira-viva$(0)$(/l). Alguns ajustes na receita (como substituir $(l:alfhomancy/elf_resources)$(item)Elementium$(0)$(/l) por $(item)Ouro$(0)) produz um $(item)Dispersor de Mana Élfico$(0), que conduz mais $(thing)Mana$(0), mais rápido e por mais tempo sem $(thing)Perda de Mana$(0).$(p)Infelizmente, estes não podem ser transformados em $(l:mana/redstone_spreader)$(item)Dispersores de Mana Pulso$(0)$(/l).",
+  "botania.page.dreamwoodSpreader1": "Melhores dispersores, é isso",
+  "botania.page.dreamwoodSpreader2": "Combinando este já poderoso dispersor com um $(l:alfhomancy/gaia_ritual)$(item)Espírito de Gaia$(0)$(/l) e uma $(l:alfhomancy/elf_resources)$(item)Pedra do Dragão$(0)$(/l) produz uma variante ainda mais potente. o $(item)Dispersor de Gaia$(0) é o padrão ouro de $(l:mana/spreader)$(item)Dispersores de Mana$(0)$(/l), com atualizações praticamente ao redor.$(p)Observe que esses dispersores disparam cargas maiores de uma só vez (e, portanto, podem disparar com menos frequência).",
+  "botania.page.dreamwoodSpreader3": "O dispersor de mana definitivo",
 
-  "botania.entry.elvenLenses": "Elven Mana Lenses",
-  "botania.tagline.elvenLenses": "Advanced Mana Lenses with new abilities",
-  "botania.page.elvenLenses0": "The knowledge of Alfheim's Mana-handling methods comes, of course, with an array of new and useful $(l:mana/lens)$(item)Mana Lenses$(0)$(/l).$(p)Unlike common overworld-y lenses, these are a bit more distinctive in their uses...",
-  "botania.page.elvenLenses1": "First off, the $(item)Paintslinger Lens$(0). This lens needs to be dyed one of the 16 colors of the spectrum to function. When a burst that's passed through it hits a colorable block ($(item)Wool, Stained Clay$(0) or $(item)Glass$(0)...), it'll turn that block (and any connected blocks of the same type and color) into the color of the $(thing)Mana Burst$(0). It seems to work on $(thing)Sheep$(0) too.",
-  "botania.page.elvenLenses2": "Paintslinger Lens",
-  "botania.page.elvenLenses3": "The $(item)Warp Lens$(0) is an interesting one. A burst under its effects that collides with a $(l:ender/piston_relay)$(item)Force Relay$(0)$(/l) will teleport to the target of said $(l:ender/piston_relay)$(item)Force Relay$(0)$(/l), maintaining its momentum, but making its $(thing)Mana$(0) irrecoverable.$(p)Furthermore, when it's combined with a $(item)Bore Lens$(0) (the $(item)Bore Lens$(0) must be first), it'll prevent bursts from breaking $(l:ender/piston_relay)$(item)Force Relays$(0)$(/l) or $(item)Pistons$(0), and teleport any blocks broken by the $(item)Bore Lens$(0) to the burst's origin.",
-  "botania.page.elvenLenses4": "Warp Lens",
-  "botania.page.elvenLenses5": "The $(item)Redirective Lens$(0) will only take effect when fired from a $(l:mana/spreader)$(item)Mana Spreader$(0)$(/l). Any burst under its effects that collides with a $(l:mana/spreader)$(item)Mana Spreader$(0)$(/l) will (apart from transferring $(thing)Mana$(0) like normal) make the receiving spreader point towards the one that fired the burst.",
-  "botania.page.elvenLenses6": "Redirective Lens",
-  "botania.page.elvenLenses7": "The $(item)Celebratory Lens$(0) functions much like the common $(item)Entropic Lens$(0); however, instead of an explosion, it creates a festive firework dyed the color of the burst.",
-  "botania.page.elvenLenses8": "Celebratory Lens",
-  "botania.page.elvenLenses9": "The $(item)Flare Lens$(0) takes over a $(l:mana/spreader)$(item)Mana Spreader$(0)$(/l)'s functionality, preventing it from firing any bursts. This type of lens is called a $(thing)Control Lens$(0).$(p)The effect of this particular $(thing)Control Lens$(0) is to make the spreader fire a continuous particle burst of the color the lens is dyed, in the direction the spreader is aimed. No mana is consumed; there're surely plenty of decorative uses for this.",
-  "botania.page.elvenLenses10": "Flare Lens",
-  "botania.page.elvenLenses11": "The $(item)Tripwire Lens$(0) is another $(thing)Control Lens$(0).$(p)A spreader with it attached will only be allowed to fire if the burst would hit a mob or player.",
-  "botania.page.elvenLenses12": "Tripwire Lens",
+  "botania.entry.elvenLenses": "Lentes de Mana Élfica",
+  "botania.tagline.elvenLenses": "Lentes de Mana Avançadas com novas habilidades",
+  "botania.page.elvenLenses0": "O conhecimento dos métodos de manipulação de Mana de Alfheim vem, é claro, com uma série de novos e úteis $(l:mana/lens)$(item)Lentes de Mana$(0)$(/l).$(p)Ao contrário das lentes comuns do mundo superior, elas são um pouco mais distintas em seus usos...",
+  "botania.page.elvenLenses1": "Em primeiro lugar, a $(item)Lente de Pintor$(0). Esta lente precisa ser tingida de uma das 16 cores do espectro para funcionar. Quando um pulso que passou por ela atinge um bloco colorido ($(item)Lã, Terracota$(0) ou $(item)Vidro$(0)...), ele transformará esse bloco (e quaisquer blocos conectados do mesmo tipo e cor) na cor do $(thing)Pulso de Mana$(0). Parece funcionar em $(thing)Ovelha$(0) também.",
+  "botania.page.elvenLenses2": "Lente de Pintor",
+  "botania.page.elvenLenses3": "A $(item)Lente de Teleporte$(0) é um interessante. Um pulso sob seus efeitos que colide com um $(l:ender/piston_relay)$(item)Force Relay$(0)$(/l) vai se teletransportar para o alvo do referido $(l:ender/piston_relay)$(item)Force Relay$(0)$(/l), mantendo seu ímpeto, mas fazendo sua $(thing)Mana$(0) irrecuperável.$(p)Além disso, quando combinada com uma $(item)Lente de Escavação$(0) (a $(item)Lente de Escavação$(0) deve ser a primeira), evitará que os pulsos quebrem $(l:ender/piston_relay)$(item)Force Relays$(0)$(/l) ou $(item)Pistões$(0), e teletransportar quaisquer blocos quebrados pela $(item)Lente de Escavação$(0) para a origem do pulso.",
+  "botania.page.elvenLenses4": "Lente de Teleporte",
+  "botania.page.elvenLenses5": "A $(item)Lente Redirecional$(0) só terá efeito quando disparada de um $(l:mana/spreader)$(item)Dispersor de Mana$(0)$(/l). Qualquer pulso sob seus efeitos que colida com um $(l:mana/spreader)$(item)Dispersor de Mana$(0)$(/l) irá (além de transferir sua $(thing)Mana$(0) como normal) faça o dispersor receptor apontar para aquele que disparou o pulso.",
+  "botania.page.elvenLenses6": "Lente Redirecional",
+  "botania.page.elvenLenses7": "A $(item)Lente de Celebração$(0) funciona muito como a comum $(item)Lente de Entropia$(0); no entanto, em vez de uma explosão, cria um fogo de artifício festivo tingido da cor do pulso.",
+  "botania.page.elvenLenses8": "Lente de Celebração",
+  "botania.page.elvenLenses9": "A $(item)Lente de Labareda$(0) assume um $(l:mana/spreader)$(item)Dispersor de Mana$(0)$(/l) funcionalidade, impedindo-o de disparar quaisquer pulsos. Esse tipo de lente é chamado de $(thing)Lente de Controle$(0).$(p)O efeito desta particular $(thing)Lente de Controle$(0) é fazer com que o dispersor dispare um pulso contínua de partículas da cor em que a lente é tingida, na direção em que o dispersor é apontado. Nenhum mana é consumido; certamente há muitos usos decorativos para isso.",
+  "botania.page.elvenLenses10": "Lente de Labareda",
+  "botania.page.elvenLenses11": "A $(item)Lente Fio de Armadilha$(0) é outra $(thing)Lente de Controle$(0).$(p)Um dispersor com ela anexada só poderá disparar se o pulso atingir um mob ou jogador.",
+  "botania.page.elvenLenses12": "Lente Fio de Armadilha",
 
   "botania.entry.prism": "Mana Prism",
   "botania.tagline.prism": "Switch a Mana Burst's effective Lens on the fly",
